1.0.9
New features
- Cover art support (Thanks to David Bitseff)
- Volume slider in tray menu
- Middle click on tray icon toggles pause
- New tray icon art (Thanks to Gleb Pekny)

Bug fixes
- A few missing translations were added
- Finally proper transparent tray icon with Qt 4.3
- Wheel over tray icon works with Qt 4.3
- Comment tag is now shown, and can be searched on like all others
- Server settings were not properly saved
- Server settings are now saved in clear text
- Fixed segfault on start on some archs (Thanks to Rene Hausleitner)
- Fixed several cache problems
- Fixed bug where double-click action was performed twice for some lists

1.0.8
New features
- Queue support (Thanks to David Bitseff)
- Iconset support
- Style support (Qt 4.3+)
- Configurable shortcuts
- Freedesktop notifications via dbus
- Caching of database
- Performance improvements
- Multimedia keys support on win32
- Option to filter songs on albums only
- Support Disc, Comment and Performer tags

Bug fixes
- Prettier tray icon on win32 and osx
- Fixed tray icon tool tip on win32 and osx
- Better eliding of artist/album title
- Don't bind all modifiers of multimedia keys
- Fixed problem with removing playing songs with dynamic playlist
- Translations can be changed without restarting the client
- and lots more..

1.0.7
New features:
- Trayicon on win32 and mac os x
- Inline clear button in filter lines
- Can now rescan single directories from directory browser
- XMMS-like playlist with user definable markup
- Alternating row colors are optional
- Can choose to display remaning time by clicking the time label

Bugfixes:
- Fixed changing port in server list
- Fixed OpenBSD crash
- When adding albums, files are now sorted by track number

Other stuff:
- Use Qt's ResizeToContents and Stretch in combination for simpler autoresizecolumn code
- Use qrand/qsrand to pick random songs in dyamic playlist, this seems to prevent
  two instances of qmpdclient from choosing the same songs at the same time.