@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>550</width>
-    <height>420</height>
+    <height>421</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -78,7 +78,7 @@
        <item>
         <widget class="QStackedWidget" name="widgetStack">
          <property name="currentIndex">
-          <number>9</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="connectionPage">
           <layout class="QVBoxLayout">
@@ -810,7 +810,7 @@
           </layout>
          </widget>
          <widget class="QWidget" name="coverArtPage">
-          <layout class="QVBoxLayout">
+          <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <widget class="QGroupBox" name="showCoverCheck">
              <property name="title">
@@ -819,19 +819,81 @@
              <property name="checkable">
               <bool>true</bool>
              </property>
-             <layout class="QHBoxLayout">
-              <item>
+             <layout class="QGridLayout" name="gridLayout">
+              <item row="0" column="0">
                <widget class="QLabel" name="label">
                 <property name="text">
                  <string>&amp;Path to MPD music root:</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                 </property>
                 <property name="buddy">
                  <cstring>coverDirEdit</cstring>
                 </property>
                </widget>
               </item>
-              <item>
-               <widget class="QLineEdit" name="coverDirEdit"/>
+              <item row="0" column="1">
+               <widget class="QLineEdit" name="coverDirEdit">
+                <property name="text">
+                 <string notr="true"/>
+                </property>
+                <property name="inputMask">
+                 <string notr="true"/>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_12">
+                <property name="text">
+                 <string>Max Height:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="buddy">
+                 <cstring>coverMaxHeight</cstring>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="coverMaxHeight">
+                <property name="text">
+                 <string notr="true">1024</string>
+                </property>
+                <property name="inputMask">
+                 <string notr="true"/>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_13">
+                <property name="text">
+                 <string>Max Width:</string>
+                </property>
+                <property name="textFormat">
+                 <enum>Qt::PlainText</enum>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+                <property name="buddy">
+                 <cstring>coverMaxWidth</cstring>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="coverMaxWidth">
+                <property name="text">
+                 <string notr="true">768</string>
+                </property>
+                <property name="inputMask">
+                 <string notr="true"/>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -1629,8 +1691,6 @@
   <tabstop>startHiddenCheck</tabstop>
   <tabstop>closeButton</tabstop>
  </tabstops>
- <resources>
-  <include location="../qmpdclient.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
